--- a/share/projects/pcl_sprint/CMakeLists.txt
+++ b/share/projects/pcl_sprint/CMakeLists.txt
@@ -28,6 +28,10 @@ if(PCL_FOUND)
 
     add_executable(viewer.exe viewer.cpp test_method.cpp generate_cylinder_on_table.cpp)
     target_link_libraries(viewer.exe ${PCL_LIBRARIES})
+
+    add_executable(CloudModel.exe CloudModel.cpp generate_cylinder_on_table.cpp)
+    target_link_libraries(CloudModel.exe ${PCL_LIBRARIES})
+
 endif()
 
 
