changed pointcloud type to consistent value and added object detector functions

--- a/share/projects/pcl_sprint_module/Makefile.gof
+++ b/share/projects/pcl_sprint_module/Makefile.gof
@@ -1,6 +1,6 @@
 BASE = ../..
 
-OBJS = main.o methods.o plane.o dataStructures.o
+OBJS = main.o methods.o plane.o dataStructures.o object_detector.o
 
 PCL = 1
 ROS = 1
