--- a/share/projects/pcl_sprint/CMakeLists.txt
+++ b/share/projects/pcl_sprint/CMakeLists.txt
@@ -26,11 +26,8 @@ if(PCL_FOUND)
     add_executable(pcl_p_test.exe main.cpp)
     target_link_libraries(pcl_p_test.exe mlr_pcl)
 
-    add_executable(viewer.exe viewer.cpp test_method.cpp generate_cylinder_on_table.cpp)
+    add_executable(viewer.exe viewer.cpp test_method.cpp generate_cylinder_on_table.cpp CloudModel.cpp PCLMotionFilter.cpp pcl_smoothing.cpp arithmetic.cpp depth_filter.cpp)
     target_link_libraries(viewer.exe mlr_pcl)
-
-    add_executable(CloudModelDemo.exe CloudModelDemo.cpp CloudModel.cpp generate_cylinder_on_table.cpp)
-    target_link_libraries(CloudModelDemo.exe ${PCL_LIBRARIES})
 
 endif()
 
