some changes in cloud model

--- a/share/projects/pcl_sprint/CMakeLists.txt
+++ b/share/projects/pcl_sprint/CMakeLists.txt
@@ -36,6 +36,10 @@ if(PCL_FOUND)
     plane.cpp)
   target_link_libraries(viewer.exe mlr_pcl)
 
+  add_executable(test.exe
+    test.cpp)
+  target_link_libraries(test.exe mlr_pcl)
+
 endif()
 
 
