--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,22 @@
-%% C++
+%% compile temporaries
 *.o
 *.a
 *.so
-*.exe
 *.swp
 parser.tab.h
 parser.tab.cpp
 parser.tab.hpp
 parser.output
 lex.yy.c
+*_moc.cpp
+*_ui.h
 
 %% EXECUTABLE
 *.exe
 x_*
 
-tags
-.cccc
-*.tmp
 
+%% IDE temporaries
 *.kdev4
 vc60.idb
 .*.config
@@ -29,10 +28,9 @@ vc60.idb
 .cproject
 .project
 *eclipse*
-*_moc.cpp
-*_ui.h
-CTestTestfile.cmake
-makefile
+
+tags
+.cccc
 
 
 # PYTHON
@@ -46,6 +44,7 @@ CORE
 
 
 %% BACKUP/temporary files
+*.tmp
 nogit*
 *~
 z.*
@@ -59,6 +58,7 @@ MT.log
 Makefile.dep
 Make.lock
 .lastMake
+makefile
 
 
 %% CMAKE
@@ -66,6 +66,7 @@ CMakeCache.txt
 CMakeFiles
 cmake_install.cmake
 CMakeLists.txt.user
+CTestTestfile.cmake
 
 
 %% SWIG
