--- a/usr/MT/manipSim/Makefile.gof
+++ b/usr/MT/manipSim/Makefile.gof
@@ -1,7 +1,5 @@
 BASE = ../../../share
 
-DEPEND = Core Gui
-
-CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
+DEPEND = Motion Core Ors Gui Optim pr2
 
 include $(BASE)/gofMake/generic.mk
