--- a/share/projects/data_recording/3rdhand-recorder/CMakeLists.txt
+++ b/share/projects/data_recording/3rdhand-recorder/CMakeLists.txt
@@ -7,6 +7,12 @@ if(LIBFREENECT_FOUND AND FLYCAPTURE_LIBRARY)
     include(.sources.cmake)
     add_executable(x_${NAME} ${SOURCES})
 
-    target_link_libraries(x_${NAME} Core Perception Gui Hardware_kinect Hardware_flycap)
+    target_link_libraries(x_${NAME} Core Perception Hardware_kinect Hardware_flycap)
+	file(COPY MT.cfg view.launch DESTINATION .)
+
+    add_executable(fps fps_measure.cpp)
+
+    target_link_libraries(fps Core Perception Gui Hardware_kinect Hardware_flycap)
 	file(COPY MT.cfg DESTINATION .)
+
 endif()
