--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -76,7 +76,7 @@ endif()
 endmacro()
 
 # configure Python
-option(WITH_PYTHON "Build python bindings using SWIG. Will be omitted if swig or NumPy are not found" ON)
+option(WITH_PYTHON "Build python bindings using SWIG. Will be omitted if swig or NumPy are not found" OFF)
 if(WITH_PYTHON)
   find_package(SWIG 2.0)
   if(SWIG_FOUND)
