libMotion depends on libHardware_joystick.

--- a/share/src/Motion/Makefile.gof
+++ b/share/src/Motion/Makefile.gof
@@ -2,7 +2,7 @@ BASE   = ../..
 NAME   = lib$(shell basename `pwd`)
 OUTPUT := $(BASE)/lib/$(NAME).so
 
-DEPEND = Core Ors Optim Algo
+DEPEND = Core Ors Optim Algo Hardware_joystick
 
 SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS = $(SRCS:%.cpp=%.o)
