vien soc-pomdp code

--- a/share/projects/soc_pomdp/peg-in-hole-dual-2/Makefile.gof
+++ b/share/projects/soc_pomdp/peg-in-hole-dual-2/Makefile.gof
@@ -1,6 +1,6 @@
 BASE = ../../..
 
-DEPEND = Algo Core Gui Ors Motion Optim Perception
+DEPEND = Algo Core Gui Ors Motion Optim extern_SWIFT
 
 SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS = $(SRCS:%.cpp=%.o)
