sphere covering problem

--- a/share/examples/Ors/sphere_covering/MT.cfg
+++ b/share/examples/Ors/sphere_covering/MT.cfg
@@ -23,5 +23,6 @@ opt/constrainedMethod = 2
       opt/dampingInc =  1.
       opt/dampingDec =  1.
   opt/nonStrictSteps =  0
+ opt/aulaMuInc = 2.;
 
 /opt/optConstrained/anyTimeAulaStopTolInc = 2.
