--- a/share/src/pr2/marc_controller_pkg/Makefile.gof
+++ b/share/src/pr2/marc_controller_pkg/Makefile.gof
@@ -1,8 +1,11 @@
 BASE   = ../../..
+-include $(BASE)/gofMake/config.mk
+
 MSGFILE = msg/JointState.msg
-ROSDIR = /opt/ros/groovy
+ROSDIR = /opt/ros/$(ROS_VERSION)
 OUTPUTDIR = $(BASE)/include/ros_msg
 PKGNAME = marc_controller_pkg
+
 
 default:
 	python2 $(ROSDIR)/lib/gencpp/gen_cpp.py \
