optimization aula cleaned

--- a/share/examples/Optim/constrained/MT.cfg
+++ b/share/examples/Optim/constrained/MT.cfg
@@ -13,7 +13,7 @@ SinusesFunction_a = 5
 exercise = 2
 
 #  enum MethodType { squaredPenalty=1, augmentedLag, logBarrier, anyTimeAula };
-opt/constrainedMethod = 2
+opt/constrainedMethod = 4
 
         opt/verbose = 1
    opt/stopTolerance =  1e-4
@@ -24,4 +24,5 @@ opt/constrainedMethod = 2
       opt/dampingDec =  1.
   opt/nonStrictSteps =  0
 
-/opt/optConstrained/anyTimeAulaStopTolInc = 2.
+opt/optConstrained/anyTimeAulaStopTolInc = 2.
+opt/aulaMuInc = 1.5
