--- a/share/src/Core/Makefile.gof
+++ b/share/src/Core/Makefile.gof
@@ -3,7 +3,7 @@ NAME   = lib$(shell basename `pwd`)
 OUTPUT := $(BASE)/lib/$(NAME).so
 
 LAPACK = 1
-#OPTIM=fast_debug
+OPTIM=fast_debug
 
 SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS = $(SRCS:%.cpp=%.o)
