--- a/share/examples/KOMO/easy/MT.cfg
+++ b/share/examples/KOMO/easy/MT.cfg
@@ -1,9 +1,9 @@
 transitionType = 1
 Hrate = 1e-0
-timeSteps = 200
+timeSteps = 100
 duration = 5.
 
 opt/constrainedMethod = 4
 
-KOMO/moveTo/randomizeInitialPose .05
+KOMO/moveTo/randomizeInitialPose 0 .05
 rndSeed 0
