--- a/share/examples/Actions/actions/Makefile.gof
+++ b/share/examples/Actions/actions/Makefile.gof
@@ -1,7 +1,7 @@
 BASE = ../../..
 
 PLIB = 1
-DEPEND = Core System Ors pr2 Motion Hardware_gamepad
+DEPEND = Actions Core System Ors pr2 Motion Hardware_gamepad
 
 LPATHS += /opt/ros/groovy/lib
 
