--- a/share/Makefile.gof
+++ b/share/Makefile.gof
@@ -75,13 +75,15 @@ reformatSources:
 	cp -f slices/$*.README.md ../README.md
 	rm -f $*.tgz;
 	cd ..; \
-	tar cvzf $*.tgz --exclude-vcs \
+	tar cvzfh $*.tgz --exclude-vcs \
 	--files-from $(PWD)/slices/default.incl \
 	--files-from $(PWD)/slices/$*.incl \
 	--exclude-from $(PWD)/slices/default.excl \
 	--exclude-from $(PWD)/slices/$*.excl
 	cp -f gofMake/config.mk.mine gofMake/config.mk
 	mv -f ../README.mlr.md ../README.md
+		
+	rm -Rf $*; mkdir $*; cd $*; tar xvzf ~/git/mlr/$*.tgz
 
 makePath/%: %
 	+@-$(BASE)/gofMake/make-path.sh $<
