--- a/usr/RL/src/CheeseMaze/CMakeLists.txt
+++ b/usr/RL/src/CheeseMaze/CMakeLists.txt
@@ -1,3 +1,4 @@
+cmake_minimum_required(VERSION 3.0)
 find_package(Qt5Core)
 find_package(Qt5Widgets)
 find_package(Qt5Svg)
@@ -23,3 +24,6 @@ target_link_libraries(CheeseMaze PUBLIC
     Qt5::Widgets
     Qt5::Svg
 )
+
+# copy folder to binary
+add_custom_command(TARGET CheeseMaze PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/images ${CMAKE_BINARY_DIR}/images)
