use base file name (without leading path) in debug macro

--- a/usr/RL/src/util/CMakeLists.txt
+++ b/usr/RL/src/util/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(util
     Commander.h
     debug_exclude.h
     debug.h
+    file_name.h
     function_signature.h
     KolmogorovSmirnovDist.cpp
     KolmogorovSmirnovDist.h
