constrained optim with equalities works on toy examples

--- a/share/examples/Optim/constrained/MT.cfg
+++ b/share/examples/Optim/constrained/MT.cfg
@@ -2,10 +2,10 @@
 fctChoice = 1
 condition = 1
 
-# enum WhichConstraint { wedge2D=1, halfcircle2D, randomLinear } which;
-constraintChoice = 3
+# enum WhichConstraint { wedge2D=1, halfcircle2D, randomLinear, circleLine2D } which;
+constraintChoice = 4
 
-dim=200
+d im=200
 
 SinusesFunction_a = 5
 
@@ -13,7 +13,7 @@ SinusesFunction_a = 5
 exercise = 2
 
 #  enum MethodType { squaredPenalty=1, augmentedLag, logBarrier, anyTimeAula };
-opt/constrainedMethod = 4
+opt/constrainedMethod = 2
 
         opt/verbose = 1
    opt/stopTolerance =  1e-4
