added kinematic chain example added distance constraints added velocity align constraints

--- a/share/examples/Motion/constraint/MT.cfg
+++ b/share/examples/Motion/constraint/MT.cfg
@@ -1,26 +1,16 @@
-method = 4
-
 transitionType = 1
 Wrate = 1e0
 Hrate = 1e0
 timeSteps = 200
 duration = 4.
+swiftCutoff = 20.0
 
 orsFile = test.ors
 orsFile = kuka_model/kuka.ors
 orsFile = ball.ors
 
 
-opt/constrainedMethod = 4
+opt/constrainedMethod = 2
 
-        opt/verbose = 1
-   opt/stopTolerance =  1e-2
-         opt/damping =  1.
-         opt/maxStep =  1.
-         opt/stepInc =  2.
-         opt/stepDec =  0.5
-      opt/dampingInc =  1.
-      opt/dampingDec =  1.
-  opt/nonStrictSteps =  0
-
-/opt/optConstrained/anyTimeAulaStopTolInc = 1.
+        opt/verbose =   1
+   opt/stopTolerance =  1e-4
