--- a/share/examples/Algo/ML-regression/MT.cfg
+++ b/share/examples/Algo/ML-regression/MT.cfg
@@ -1,6 +1,6 @@
-mode = 2
+mode = 1
 
-n = 20
+n = 5
 d = 1
 dataType = 1
 dataFeatureType = 3
@@ -9,9 +9,10 @@ M = 3
 outlierRate = .1
 outlierSigma = 10.
 
-modelFeatureType = 4
+modelFeatureType = 2
 rbfBias = 0
 rbfWidth = .14
-lambda = 1e-2 10
+lambda = 1e-1 10
 
+k_fold = 3
 ML/KernelWidth = .5
