--- a/share/src/Media/Makefile.gof
+++ b/share/src/Media/Makefile.gof
@@ -2,7 +2,7 @@ BASE = ../..
 NAME   = lib$(shell basename `pwd`)
 OUTPUT := $(BASE)/lib/$(NAME).so
 
-#PORTAUDIO = 1 #please set this in your local gofMake/config.mk...
+PORTAUDIO = 1
 DEPEND = Core
 
 SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
